Fixed font size on mobile

--- a/layout.css
+++ b/layout.css
@@ -16,6 +16,6 @@
     .main {
         width: 100%;
         /* The width is 100%, when the viewport is 800px or smaller */
-        font-size:10vw;
+        font-size:4vw;
     }
 }
